<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClickCart"
    tools:context=".fragments.ExpandItem">

    <Button
        android:id="@+id/goToCart"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="-30dp"
        android:drawableTop="@mipmap/ic_cart_foreground"
        android:text="@string/cart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Item_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/item_1"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Item_Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="price"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/Item_Image"
            android:layout_width="180dp"
            android:layout_height="212dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@android:drawable/ic_input_get" />

        <TextView
            android:id="@+id/Item_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/description" />

        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:onClick="onClickAdd"
            android:text="@string/add_to_cart"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>